--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 !DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Toronto Raptors</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>History</h1>
+<p>After much time playing teams from within the same nation, NBA began their expansion into Canada. Toronto businessman, John Bitove was then required to pay $125 million US in exhange for the majority ownership of the Toronto Raptors, after its establishment on November 4th, 1993. The team's name and logo, however, was not created until May 15th, 1994, before which there were nation-wide contests to see who could come up with the best name and logo for the team. In the end, the name "Toronto Raptors" was chosen because of the popularity of the movie Jurassic Park which released in 1993. </p>
 
+
+
+<img src=<img alt="" src="//upload.wikimedia.org/wikipedia/commons/4/46/Lipofsky_Vince_Carter.jpg" width="183" height="300" class="thumbimage" data-file-width="183" data-file-height="300"> />
 </body>
 </html>
