--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 
 
-<img src=<img alt="" src="//upload.wikimedia.org/wikipedia/commons/4/46/Lipofsky_Vince_Carter.jpg" width="183" height="300" class="thumbimage" data-file-width="183" data-file-height="300"> />
+<img src=<img alt="" src="//upload.wikimedia.org/wikipedia/commons/4/46/Lipofsky_Vince_Carter.jpg" width="183" height="300" class="thumbimage" data-file-width="183" data-file-height="300" />
 </body>
 </html>
