--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 
 
-<img src=https://pbs.twimg.com/profile_images/664839179906379777/ujhYkO85.jpg" width="304" height="304">
+<img src="https://pbs.twimg.com/profile_images/664839179906379777/ujhYkO85.jpg" />
 </body>
 </html>
