--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a> We The North</a>
+<a> We The North</a
 <img src="http://2.bp.blogspot.com/-LhSWsq5BXus/U1MFbBEar9I/AAAAAAAATa0/aMHjMPRS6fU/s1600/we+the+north.jpg" />
 <html>
 <head>
